Smooth View doesn't work with Eevee #64855

Closed
opened 2019-05-20 05:06:00 +02:00 by Ovionis · 10 comments

System Information
Operating system: Windows-7-6.1.7601-SP1 64 Bits
Graphics card: GeForce GTX 770/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 430.64

Blender Version
Broken: version: 2.80 (sub 69), branch: blender2.7, commit date: 2019-05-19 00:09, hash: 06c4139a68

When you run any viewport navigation operator that uses the Smooth View property from the preferences, Eevee ignores it and just snaps to the end.
2019-05-19 22-01-36.mp4

**System Information** Operating system: Windows-7-6.1.7601-SP1 64 Bits Graphics card: GeForce GTX 770/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 430.64 **Blender Version** Broken: version: 2.80 (sub 69), branch: blender2.7, commit date: 2019-05-19 00:09, hash: `06c4139a68` When you run any viewport navigation operator that uses the Smooth View property from the preferences, Eevee ignores it and just snaps to the end. [2019-05-19 22-01-36.mp4](https://archive.blender.org/developer/F7049798/2019-05-19_22-01-36.mp4)
Author

Added subscriber: @Phigon

Added subscriber: @Phigon
Member

Added subscribers: @fclem, @brecht, @lichtwerk

Added subscribers: @fclem, @brecht, @lichtwerk
Member

Changed status from 'Open' to: 'Archived'

Changed status from 'Open' to: 'Archived'
Philipp Oeser self-assigned this 2019-05-20 12:14:42 +02:00
Member

smooth view is not intended in rendered view:

  • see ED_view3d_smooth_view_ex, there it says:

/* skip smooth viewing for render engine draw */

I assume this is not considered a bug and will close this report [but to doublecheck if this should indeed be possible (for eevee), I will subscribe @brecht and @fclem to see if they have objections...]

smooth view is not intended in rendered view: - see `ED_view3d_smooth_view_ex`, there it says: > /* skip smooth viewing for render engine draw */ I assume this is not considered a bug and will close this report [but to doublecheck if this should indeed be possible (for eevee), I will subscribe @brecht and @fclem to see if they have objections...]
Author

@lichtwerk I found that it works perfectly fine in Lookdev mode.

I don't know how to navigate the history as well as I do with github but I found that line way back in 2014 (https://developer.blender.org/rB45163387d25d66b90f8797373a8a406ee94f4ccb), I don't know EXACTLY when it was added but this was well before Eevee's live rendered viewport.

It's for Cycles (and BR's Rendered view), where the rendered mode's viewport isn't expected to be updated continuously (near-realtime) like Eevee.

@lichtwerk I found that it works perfectly fine in Lookdev mode. I don't know how to navigate the history as well as I do with github but I found that line way back in 2014 (https://developer.blender.org/rB45163387d25d66b90f8797373a8a406ee94f4ccb), I don't know EXACTLY when it was added but this was well before Eevee's live rendered viewport. It's for Cycles (and BR's Rendered view), where the rendered mode's viewport isn't expected to be updated continuously *(near-realtime)* like Eevee.
Author

Changed status from 'Archived' to: 'Open'

Changed status from 'Archived' to: 'Open'
Ovionis reopened this issue 2019-08-27 22:13:57 +02:00
Member

Added subscriber: @WilliamReynish

Added subscriber: @WilliamReynish
Member

Well, still this is not a bug [more like a TODO/request], but raising awareness to @WilliamReynish, @fclem:
Should we permit this for Eevee?

Well, still this is not a bug [more like a TODO/request], but raising awareness to @WilliamReynish, @fclem: Should we permit this for Eevee?

This issue was referenced by 441f6cf020

This issue was referenced by 441f6cf0206c7ee029f618fdab25a4e7adfacc91

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#64855
No description provided.