Fix T64855: smooth view not working in Eevee rendered mode